--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Harini and this my first webapp.
+<h4>This is a new heading</h4>
+I have made new local changes
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
