--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,18 @@
 <html>
+    <head>
+        <title>Article One | Harini</title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+        </div>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            <p>
+                This is the content for article one.This is the content for article one.This is the content for article one.This is the content for article one.This is the content for article one.This is the content for article one.
+            </p>
+        </div>
+    </body>
 </html>
