--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,2 +1,19 @@
 <html>
+    <head>
+        <title>Article Three | Harini</title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+        </div>
+        <h3>
+            Article Three
+        </h3>
+        <div>
+            <p>
+                This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.
+                
+            </p>
+        </div>
+    </body>
 </html>
