--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,19 @@
 <html>
+    <head>
+        <title>Article Two | Harini</title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+        </div>
+        <h3>
+            Article Two
+        </h3>
+        <div>
+            <p>
+                This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.
+                
+            </p>
+        </div>
+    </body>
 </html>
