[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,8 +1,16 @@
 <html>
     <head>
         <title>Article One | Harini</title>
+        <style>
+            .container{
+                max-width:800px;
+                margin: 0 auto;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div class='container'>
         <div>
             <a href='/'>Home</a>
         </div>
@@ -13,6 +21,7 @@
             <p>
                 This is the content for article one.This is the content for article one.This is the content for article one.This is the content for article one.This is the content for article one.This is the content for article one.
             </p>
+        </div>
         </div>
     </body>
 </html>
