--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,6 +5,7 @@
             .container{
                 max-width:800px;
                 margin: 0 auto;
+                color:blue;
                 font-family: sans-serif;
             }
         </style>
