--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,8 +1,17 @@
 <html>
     <head>
         <title>Article Two | Harini</title>
+        <style>
+            .container{
+                max-width:800px;
+                margin: 0 auto;
+                color:blue;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div class='container'>
         <div>
             <a href='/'>Home</a>
         </div>
@@ -14,6 +23,7 @@
                 This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.
                 
             </p>
+        </div>
         </div>
     </body>
 </html>
