[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,19 +1,29 @@
 <html>
     <head>
         <title>Article Three | Harini</title>
+        <style>
+            .container{
+                max-width:800px;
+                margin: 0 auto;
+                color:blue;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href='/'>Home</a>
-        </div>
-        <h3>
-            Article Three
-        </h3>
-        <div>
-            <p>
-                This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.
-                
-            </p>
+        <div class='container'>
+            <div>
+                <a href='/'>Home</a>
+            </div>
+            <h3>
+                Article Three
+            </h3>
+            <div>
+                <p>
+                    This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.This is the content of article three.
+                    
+                </p>
+            </div>
         </div>
     </body>
 </html>
