--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,14 +1,7 @@
 <html>
     <head>
         <title>Article Three | Harini</title>
-        <style>
-            .container{
-                max-width:800px;
-                margin: 0 auto;
-                color:blue;
-                font-family: sans-serif;
-            }
-        </style>
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class='container'>
