[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
 <h4>This is a new heading</h4>
 I have made new local changes
         </div>
+        <script>
+            alert('Hi. This is a Javascript alert!');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
