[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent.fmaa1-2.fna.fbcdn.net/v/t1.0-9/35591_180630458615686_7866851_n.jpg?oh=4bf291565c0608d2ea5f01b6b06e24bd&oe=5A2A6C16" class="img-medium"/>
         </div>
         <br>
         <div id="main-text" class="center text-big bold">
