[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img id="madi" src="https://scontent.fmaa1-2.fna.fbcdn.net/v/t1.0-9/35591_180630458615686_7866851_n.jpg?oh=4bf291565c0608d2ea5f01b6b06e24bd&oe=5A2A6C16" class="img-medium"/>
         </div>
@@ -13,9 +14,7 @@
 <h4>This is a new heading</h4>
 I have made new local changes
         </div>
-        <script>
-            alert('Hi. This is a Javascript alert!');
-        </script>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
