[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,12 +8,18 @@
         <div class="center">
             <img id="madi" src="https://scontent.fmaa1-2.fna.fbcdn.net/v/t1.0-9/35591_180630458615686_7866851_n.jpg?oh=4bf291565c0608d2ea5f01b6b06e24bd&oe=5A2A6C16" class="img-medium"/>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am Harini and this my first webapp.
-<h4>This is a new heading</h4>
-I have made new local changes
+        <hr/>
+        <h1>Personal</h1>
+        <div>
+            My name is Harini Rangarajan.
         </div>
+        <hr/>
+        <h1>Professional</h1>
+        <div>
+            I am a freelance IT programmer.
+        </div>
+        <hr/>
+        <div class="footer"></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
