[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,8 @@
         <hr/>
         <div class="footer">
             This button<button id='counter'>Click me</button> has been clicked <span id='count'>0</span> times.
+            <input type='text' placeholder='name' id='name'/>
+            <input type='submit' value='Submit' />
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
