--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,10 @@
         <hr/>
         <div class="footer">
             This button<button id='counter'>Click me</button> has been clicked <span id='count'>0</span> times.
+        </div>
+        <div>
             <input type='text' placeholder='name' id='name'/>
-            <input type='submit' value='Submit' />
+            <input type='submit' value='Submit' id='submit_btn' />
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
