--- a/ui/index.html
+++ b/ui/index.html
@@ -25,6 +25,10 @@
         <div>
             <input type='text' placeholder='name' id='name'/>
             <input type='submit' value='Submit' id='submit_btn' />
+            <br/>
+            <ul id='namelist'>
+                
+            </ul>
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
