[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
             I am a freelance IT programmer.
         </div>
         <hr/>
-        <div class="footer">
+        <!--<div class="footer">
             This button<button id='counter'>Click me</button> has been clicked <span id='count'>0</span> times.
         </div>
         <div>
@@ -30,7 +30,7 @@
                 
             </ul>
         </div>
-        </div>
+        </div>-->
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
