--- a/ui/index.html
+++ b/ui/index.html
@@ -31,6 +31,12 @@
             </ul>
         </div>
         </div>-->
+        <div>
+            <h4>Login </h4>
+            <input type="text" id="username" placeholder="username"/>
+            <input type="password" id="password" placeholder="password"/>
+            <input type='submit' value='Submit' id='submit_btn' />
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
